--- a/AdAp-Design/public/index.html
+++ b/AdAp-Design/public/index.html
@@ -18,7 +18,7 @@
         </div>
         <div id="navbar-menu" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
-                <li role="presentation" class="active"><a href="#/">Home</a></li>
+                <li role="presentation"><a href="#/">Home</a></li>
                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown">Categories <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Cars</a></li>
@@ -37,7 +37,7 @@
                 </li>
             </ul>
             <ul class="nav navbar-nav pull-right">
-                <!--<li><a href="#/logout" id="logout"><span class="glyphicon"></span> Sign Out</a></li>-->
+                <li><a href="#/logout" id="logout" class="hidden">Sign Out</a></li>
                 <li><a href="#/register">Sign In</a></li>
             </ul>
         </div>
