--- a/AdAp-Design/public/index.html
+++ b/AdAp-Design/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>AdAp - Home</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
 </head>
 <body>
@@ -13,12 +14,11 @@
     <div class="container-fluid">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu"></button>
-            <a href="/" class="navbar-brand">AdApp</a>
+            <a href="/" class="navbar-brand"><img src="img/adap-logo-small.png" alt=""/></a>
         </div>
         <div id="navbar-menu" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li role="presentation" class="active"><a href="#/">Home</a></li>
-                <li role="presentation"><a href="#/">Home</a></li>
                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown">Categories <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">Cars</a></li>
@@ -79,11 +79,9 @@
         <!-- center + right -->
         <div class="col-sm-10">
             <div class="row">
-                <div class="col-xs-4">
+                <div class="col-xs-4 poster-block">
                     <div class="col-xs-12 panel panel-default poster">
-                        <div class="panel-heading"><strong>Afterschool Bus Driver</strong>
-                            <span class="pull-right">27-Dec-2014</span>
-                        </div>
+                        <div class="panel-heading"><strong>Public View - Title</strong></div>
 
                         <div class="row poster-img-data">
                             <div class="col-xs-6">
@@ -115,16 +113,17 @@
                             </p>
                         </div>
                         <div class="panel-footer">
+                            <span class="pull-right" style="margin-top: 7px;"><strong>Published on:</strong> 27-Dec-2014</span>
                             <button class="btn btn-default">Read More</button>
                         </div>
                     </div>
                 </div>
                 <!-- col-xs-4-->
-                <div class="col-xs-4">
+                <div class="col-xs-4 poster-block">
                     <div class="col-xs-12 panel panel-default poster">
-                        <div class="panel-heading"><strong>Afterschool Bus Driver</strong>
-                            <span class="pull-right">27-Dec-2014</span>
-                        </div>
+                        <a href="#" class="btn btn-sm btn-danger glyphicon glyphicon-remove pull-right"></a>
+                        <a href="#" class="btn btn-sm btn-warning glyphicon glyphicon-pencil pull-right"></a>
+                        <div class="panel-heading"><strong>User's Own Ad View - Title</strong></div>
 
                         <div class="row poster-img-data">
                             <div class="col-xs-6">
@@ -133,17 +132,19 @@
                             <div class="col-xs-6 row">
                                 <ul class="list-group poster-main-data-list">
                                     <li class="list-group-item">
-                                        <strong>Name: </strong>
-                                        <span>Maria</span>
-                                    </li>
-
-                                    <li class="list-group-item">
-                                        <strong>Email: </strong>
-                                        <a href="mailto:maria@gmail.com">maria@gmail.com</a>
+                                        <strong>Category: </strong>
+                                        <span>Other</span>
                                     </li>
                                     <li class="list-group-item">
-                                        <strong>Tel: </strong>
-                                        <span>+359 891 285429</span>
+                                        <strong>Town: </strong>
+                                        <span>Plovdiv</span>
+                                    </li>
+                                    <li class="list-group-item">
+                                        <strong>Status: </strong>
+                                        <span>Approved</span>
+                                    </li>
+                                    <li class="list-group-item  change-ad-status">
+                                        <a href="#" class="btn btn-success center-block disabled"><span class=" glyphicon glyphicon-repeat"> Re-Publish</span></a>
                                     </li>
                                 </ul>
                             </div>
@@ -151,25 +152,28 @@
                         <div class="panel-body">
                             <p>Driver with D1 license needed ASAP for approximately 2 hours per day, 5
                                 days a week collecting children with a staff member from local schools and dropping back
-                                to
-                                afterschool facility. Occasional weekend work can be offered also.
+                                to afterschool facility. Occasional weekend work can be offered also.
                             </p>
                         </div>
                         <div class="panel-footer">
+                            <span class="pull-right" style="margin-top: 7px;"><strong>Published on:</strong> 27-Dec-2014</span>
                             <button class="btn btn-default">Read More</button>
                         </div>
                     </div>
                 </div>
                 <!-- col-xs-4 -->
-                <div class="col-xs-4">
+                <div class="col-xs-4 poster-block">
                     <div class="col-xs-12 panel panel-default poster">
-                        <div class="panel-heading"><strong>Afterschool Bus Driver</strong>
-                            <span class="pull-right">27-Dec-2014</span>
-                        </div>
-
+                        <a href="#" class="btn btn-sm btn-danger glyphicon glyphicon-remove pull-right"></a>
+                        <a href="#" class="btn btn-sm btn-warning glyphicon glyphicon-pencil pull-right"></a>
+                        <div class="panel-heading"><strong>Admin Ad View - Title</strong></div>
                         <div class="row poster-img-data">
                             <div class="col-xs-6">
                                 <img src="img/bus-driver.jpg" class="img-thumbnail"/>
+                                <div class="text-center change-ad-status left-col-btn">
+                                    <a href="#" class="btn btn-success center-block disabled"><span class="glyphicon glyphicon-thumbs-up"> Approve</span></a>
+                                    <a href="#" class="btn btn-danger center-block"><span class="glyphicon glyphicon-thumbs-down"> Reject</span></a>
+                                </div>
                             </div>
                             <div class="col-xs-6 row">
                                 <ul class="list-group poster-main-data-list">
@@ -186,6 +190,18 @@
                                         <strong>Tel: </strong>
                                         <span>+359 891 285429</span>
                                     </li>
+                                    <li class="list-group-item">
+                                        <strong>Category: </strong>
+                                        <span>Other</span>
+                                    </li>
+                                    <li class="list-group-item">
+                                        <strong>Town: </strong>
+                                        <span>Plovdiv</span>
+                                    </li>
+                                    <li class="list-group-item">
+                                        <strong>Status: </strong>
+                                        <span>Approved</span>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -197,6 +213,7 @@
                             </p>
                         </div>
                         <div class="panel-footer">
+                            <span class="pull-right" style="margin-top: 7px;"><strong>Published on:</strong> 27-Dec-2014</span>
                             <button class="btn btn-default">Read More</button>
                         </div>
                     </div>
@@ -233,7 +250,9 @@
     </div>
     <div class="row panel-footer footer">
             <div class="col-xs-4">
-                <img src="img/github-fork-me.png" alt=""/>
+                <a href="https://github.com/Y-LyN-10/AdAp-AngularJS-Course-Project">
+                    <img src="img/github-fork-me.png" alt=""/>
+                </a>
             </div>
             <div class="col-xs-4 footer-text">
                 <div class="text-center">
