--- a/AdApp/index.html
+++ b/AdApp/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html ng-app="app" ng-controller="AppController">
 <head>
     <meta charset="UTF-8">
     <title>AdApp</title>
@@ -10,15 +10,37 @@
     <link rel="stylesheet" href="assets/css/bootstrap-theme.css"/>
     <link rel="stylesheet" href="assets/css/bootstrap-theme.css.map"/>
     <link rel="stylesheet" href="assets/css/app-styles.css"/>
+    <link rel="stylesheet" href="assets/css/signin.css"/>
 </head>
 <body>
 
-<!--scripts-->
-<script src="assets/lib/jquery/jquery-2.1.3.js" type="application/javascript"></script>
-<script src="assets/lib/jquery.noty/jquery.noty.js" type="application/javascript"></script>
-<script src="assets/lib/bootstrap/bootstrap-3.1.1.js" type="application/javascript"></script>
+<header id="app-header">
+    <div ng-include="'app/shared/header.html'"></div>
+</header>
+
+<div class="container-fluid">
+    <div class="row page-content" ng-view></div>
+
+    <header id="app-footer">
+        <div ng-include="'app/shared/footer.html'"></div>
+    </header>
+</div>
+<!-- lib scripts-->
 <script src="assets/lib/angular/angular.js" type="application/javascript"></script>
 <script src="assets/lib/angular/angular-resource.js" type="application/javascript"></script>
 <script src="assets/lib/angular/angular-route.js" type="application/javascript"></script>
+<script src="assets/lib/jquery/jquery-2.1.3.js" type="application/javascript"></script>
+<script src="assets/lib/jquery.noty/jquery.noty.js" type="application/javascript"></script>
+<script src="assets/lib/bootstrap/bootstrap-3.1.1.js" type="application/javascript"></script>
+<script src="assets/lib/ui.bootstrap/ui.bootstrap.pagination-0.12.0.js" type="application/javascript"></script>
+
+<!-- my scripts-->
+<script src="app/app.js" type="application/javascript"></script>
+
+<!-- controllers -->
+<script src="app/shared/controllers/AppController.js"></script>
+<script src="app/shared/controllers/HomeController.js"></script>
+<script src="app/components/public/controllers/LoginController.js"></script>
+<script src="app/components/public/controllers/RegisterController.js"></script>
 </body>
 </html>
