List all ads, filtering by town & category works too

--- a/AdApp/index.html
+++ b/AdApp/index.html
@@ -45,11 +45,15 @@
 <script src="app/account/controllers/LoginController.js"></script>
 <script src="app/account/controllers/RegisterController.js"></script>
 
+<!--<script src="app/user/controllers/UserController.js"></script>-->
+
 <!-- services -->
 <script src="app/common/services/AdsService.js"></script>
 <script src="app/common/services/CategoriesService.js"></script>
 <script src="app/common/services/TownsService.js"></script>
 
 <script src="app/account/services/AuthService.js"></script>
+
+<script src="app/user/services/UserService.js"></script>
 </body>
 </html>
