List admin ads, approve and reject ads is working

--- a/AdApp/index.html
+++ b/AdApp/index.html
@@ -54,6 +54,7 @@
 <script src="app/user/controllers/UserProfileController.js"></script>
 
 <script src="app/admin/controllers/AdminListsController.js"></script>
+<script src="app/admin/controllers/AdminAdsController.js"></script>
 
 <!-- services -->
 <script src="app/account/services/AuthService.js"></script>
@@ -63,6 +64,8 @@
 <script src="app/common/services/TownsService.js"></script>
 
 <script src="app/user/services/UserService.js"></script>
+
 <script src="app/admin/services/AdminService.js"></script>
+<script src="app/admin/services/AdminAdsService.js"></script>
 </body>
 </html>
